[gd_scene load_steps=13 format=2]

[ext_resource path="res://atlas/lobby/contents.sprites/background_gradation.tres" type="Texture" id=1]
[ext_resource path="res://agreement/agreement.gd" type="Script" id=2]
[ext_resource path="res://atlas/lobby/contents.sprites/card_list_panel.tres" type="Texture" id=3]
[ext_resource path="res://atlas/lobby/contents.sprites/board_black.tres" type="Texture" id=4]
[ext_resource path="res://font/scdream8/size_40_outline_4_333333_fallback.tres" type="DynamicFont" id=5]
[ext_resource path="res://atlas/lobby/contents.sprites/button/slot_pressed.tres" type="Texture" id=6]
[ext_resource path="res://atlas/lobby/contents.sprites/button/slot_normal.tres" type="Texture" id=7]
[ext_resource path="res://translation/dynamic_font_size_control.gd" type="Script" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 40, 40 )
margin_left = 12.25
margin_right = 11.75
margin_top = 11.375
margin_bottom = 12.625

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Agreement" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12018
margin_right = -1.12012
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="GradationTop" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 500.0
margin_bottom = 1000.0
rect_min_size = Vector2( 0, 500 )
rect_scale = Vector2( 1, -1 )
texture = ExtResource( 3 )
expand = true

[node name="GradationBottom" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
rect_min_size = Vector2( 0, 500 )
texture = ExtResource( 3 )
expand = true

[node name="PanelContainer" type="PanelContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -442.0
margin_right = 412.0
margin_bottom = 442.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 12.25
margin_top = 11.375
margin_right = 812.25
margin_bottom = 1003.38

[node name="PrivacyPolicy" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
custom_fonts/normal_font = ExtResource( 5 )
text = "ID_AGREEMENT_PRIVACY_POLICY"

[node name="PrivacyAgreeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 404.0
margin_right = 800.0
margin_bottom = 494.0
alignment = 1

[node name="PrivacyAgree" type="CheckBox" parent="PanelContainer/VBoxContainer/PrivacyAgreeContainer"]
margin_left = 278.0
margin_right = 368.0
margin_bottom = 90.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PrivacyAgreeContainer"]
margin_left = 372.0
margin_top = 21.0
margin_right = 522.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 5 )
text = "ID_AGREEMENT_AGREE"
valign = 1
clip_text = true
script = ExtResource( 8 )

[node name="TOS" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 800.0
margin_bottom = 898.0
rect_min_size = Vector2( 800, 400 )
custom_fonts/normal_font = ExtResource( 5 )
text = "ID_AGREEMENT_TERMS_OF_SERVICE"

[node name="TOSAgreeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 902.0
margin_right = 800.0
margin_bottom = 992.0
alignment = 1

[node name="TOSAgree" type="CheckBox" parent="PanelContainer/VBoxContainer/TOSAgreeContainer"]
margin_left = 278.0
margin_right = 368.0
margin_bottom = 90.0
custom_icons/radio_checked = ExtResource( 6 )
custom_icons/checked = ExtResource( 6 )
custom_icons/radio_unchecked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 7 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TOSAgreeContainer"]
margin_left = 372.0
margin_top = 21.0
margin_right = 522.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 5 )
text = "ID_AGREEMENT_AGREE"
valign = 1
clip_text = true
script = ExtResource( 8 )
